--- a/mrp_bom_product_price_margin/i18n/fr.po
+++ b/mrp_bom_product_price_margin/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-08 13:58+0000\n"
-"PO-Revision-Date: 2024-11-08 13:58+0000\n"
+"POT-Creation-Date: 2024-12-20 13:38+0000\n"
+"PO-Revision-Date: 2024-12-20 13:38+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -128,7 +128,7 @@ msgstr "Cela définira le coût du Produit avec ce total."
 #. module: mrp_bom_product_price_margin
 #: model:ir.model.fields,field_description:mrp_bom_product_price_margin.field_mrp_bom__product_margin_rate
 msgid "Margin (%)"
-msgstr "Marge théorique (%)"
+msgstr "Taux de marque (%)"
 
 #. module: mrp_bom_product_price_margin
 #: model:ir.model.fields,help:mrp_bom_product_price_margin.field_mrp_bom__product_margin_rate
@@ -147,11 +147,6 @@ msgstr ""
 #: model:ir.model,name:mrp_bom_product_price_margin.model_product_template
 msgid "Product"
 msgstr "Produit"
-
-#. module: mrp_bom_product_price_margin
-#: model:ir.model.fields,field_description:mrp_bom_product_price_margin.field_mrp_bom__product_margin_rate_percentage
-msgid "Product Margin"
-msgstr "Produit - Marge"
 
 #. module: mrp_bom_product_price_margin
 #: model:ir.model.fields,field_description:mrp_bom_product_price_margin.field_mrp_bom__product_sale_price
@@ -187,6 +182,15 @@ msgstr "Sous-total"
 #: model:ir.model.fields,field_description:mrp_bom_product_price_margin.field_mrp_bom_line__standard_price_subtotal_percentage
 msgid "Subtotal price %"
 msgstr "Sous-total %"
+
+#. module: mrp_bom_product_price_margin
+#: model:ir.model.fields,help:mrp_bom_product_price_margin.field_mrp_bom__diff_product_bom_standard_price
+msgid ""
+"Technical field used to display or hide button 'Apply this cost to Product "
+"standard price' in the form view"
+msgstr ""
+"Champ technique utilisé pour afficher ou cacher le bouton 'Définir le coût du Produit "
+"avec ce prix.' dans la vue formulaire."
 
 #. module: mrp_bom_product_price_margin
 #: model_terms:ir.ui.view,arch_db:mrp_bom_product_price_margin.view_mrp_bom_sale_product_margin_form
